--- a/report/大作业报告.md
+++ b/report/大作业报告.md
@@ -5,7 +5,7 @@
 |：-----：|  -------   |
 |   耿艺  |            |
 |  脱晓彤 |            |
-|  胡海川 |            |
+|  胡海川 |   基于抽象语法树的代码摘要和相似性分析         |
 
 
 ## 研究主题
@@ -27,6 +27,15 @@
  1. 分析代码相似度的方法有很多，诸如基于生成的特征向量比较法，图相似比较法，基于神经网络的相似度比较法等等，这里采取抽象语法树，是因为语法树更能反应代码的结构信息，即抛开具体实现底层的上层信息。
  2. 叶子节点根据节点的类型和属性生成哈希值，父节点累加子节点的哈希值，并结合自身的属性生成新的哈希值。
  3. 如果单纯静态地比较代码抽象语法树的相似程度，会造成这样的结果：如果抄袭者修改拆分了一些局部变量，会造成它们父节点的哈希值的变化，往往导致误判。在此基础上，通过语法树的剪枝消除底层信息的差异，比较上层信息的相似度，如果发现相似度超过阈值，进行回溯，将删去的节点逐一放回，直到到达阈值的边界。
+ 4. 根据剪枝回放后剩余节点的个数，与原有节点的个数进行比较，若超过某个比值则可以判定代码涉嫌抄袭
+##### 测试数据
+相似代码数据集：
+a. 变量更换名字
+b. 表达式拆分
+c. 函数拆分
+##### 算法的缺陷
+1.  如果语法树结构相差很多，则难以通过同步的剪枝来判断(例如将表达式封装成函数进行调用会提升ast层数)
+2.  回放节点的算法有待改进
  
 
 ## 参考文献
