--- a/report/大作业报告.md
+++ b/report/大作业报告.md
@@ -28,6 +28,19 @@
  2. 叶子节点根据节点的类型和属性生成哈希值，父节点累加子节点的哈希值，并结合自身的属性生成新的哈希值。
  3. 如果单纯静态地比较代码抽象语法树的相似程度，会造成这样的结果：如果抄袭者修改拆分了一些局部变量，会造成它们父节点的哈希值的变化，往往导致误判。在此基础上，通过语法树的剪枝消除底层信息的差异，比较上层信息的相似度，如果发现相似度超过阈值，进行回溯，将删去的节点逐一放回，直到到达阈值的边界。
  4. 根据剪枝回放后剩余节点的个数，与原有节点的个数进行比较，若超过某个比值则可以判定代码涉嫌抄袭
+#####  代码实现
+|     文件名     |        功能         |       备注        |
+|  :---------:  |   ---------------  |     ------------  |  
+|  /utils/tree/preprocess |  python代码预处理(去除注释，空行，import语句等等) |           无|
+|  /utils/tree/astprocess |  抽象语法树生成，特征提取  |  需要在预处理之后进行  |
+|  /utils/tree/postprocess| 抽象语法树相似度比较，进一步特征提取|  需要在抽象语法树生成之后进行|
+|  /dataprocess/tree_train.json|  相似代码数据集训练配置/结果  |  目前只实现了平均权重的训练模式  |
+|  /dataprocess/tree_train.py  |  相似代码数据集训练所用代码   |  无          |
+具体流程如下图所示
+<div style="text-align:center;"><strong>图x 代码相似性检测流程图<strong/><div/>
+
+![](https://datascience-hhc.oss-cn-beijing.aliyuncs.com/Statemachine%20Diagram0.png)
+
 ##### 测试数据
 相似代码数据集：
 a. 变量更换名字
@@ -37,6 +50,9 @@ c. 函数拆分
 1.  如果语法树结构相差很多，则难以通过同步的剪枝来判断(例如将表达式封装成函数进行调用会提升ast层数)
 2.  回放节点的算法有待改进
  
-
+## 代码仓库地址
+https://github.com/Txtxiao/-
+ 
 ## 参考文献
  1. 《一种改进的基于抽象语法树的软件源代码比对算法》, 中图分类号：TP309, 文献标识码：A, 文章编号 ：1671-1122（2014）01-0038-05
+ 
