代码特征提取

--- a/report/大作业报告.md
+++ b/report/大作业报告.md
@@ -18,6 +18,17 @@
 ### 基于抽象语法树的代码摘要和相似性分析
 
 #### 代码摘要
+##### 特征选取
+######  a. 语法树层高(代码复杂度)
+######  b.语法树节点数量(代码复杂度)
+######  c.类定义代码行数(面向对象/结构化风格)
+######  d.节点数量&&层高(代码组织风格)
+
+#####  代码实现： /utils/tree/mk_summary
+
+##### 算法缺陷
+1. 节点数量和层高的关系需要大量测试代码进行定量计算确定
+
 
 #### 相似性分析
 ##### 目的
@@ -46,7 +57,7 @@
 a. 变量更换名字
 b. 表达式拆分
 c. 函数拆分
-##### 算法的缺陷
+##### 算法缺陷
 1.  如果语法树结构相差很多，则难以通过同步的剪枝来判断(例如将表达式封装成函数进行调用会提升ast层数)
 2.  回放节点的算法有待改进
  
