--- a/report/大作业报告.md
+++ b/report/大作业报告.md
@@ -136,6 +136,9 @@ print(otherStyleTime)   # 2020-02-23 11:17:40
 > 以user_id为60898的学生为例，该生上午没有提交记录，基本在下午两点到六点，偶尔晚上十点也会提交代码，可能没有熬夜的习惯。分数两极分化，零分或者一百分，几乎没有出现频繁提交看报错用例找bug的分数逐步上升的情况，逻辑思维清晰解决报错能力强。
 
 ## 6.其他（对czy说的话）
+1. 老师讲课生动幽默发散性强，能假生活中的平凡事物以小见大，例如橘子....我也好想吃橘子！
+2. 老师循循善诱的言语入耳如沐春风，又如陈年佳酿，上层清冽甘爽，下层却又深不可见底。老师不愧是程序员中的数学家，数学家中的艺术家，佩服佩服。
+
 
 
 ## 7.附录
